--- a/localisation/KR_game_rules_l_simp_chinese.yml
+++ b/localisation/KR_game_rules_l_simp_chinese.yml
@@ -3,7 +3,7 @@
  ENG_START_ELECTION:0 "£KR_game_rule_flag_ENG 1936年劳工联合会议"
  RULE_OPTION_ENG_START_ELECTION_RANDOM:0 "默认"
  RULE_OPTION_ENG_START_ELECTION_RANDOM_DESC:0 "自治派、准则派与联邦派在1936年劳联会中进行了激烈的角逐。这几个派系都有可能获得选举胜利。"
- RULE_OPTION_ENG_START_ELECTION_SYNDICALIST_FEDERATIONIST:0 "£KR_game_rule_flag_ENG 联邦派&公理会派取得多数"
+ RULE_OPTION_ENG_START_ELECTION_SYNDICALIST_FEDERATIONIST:0 "£KR_game_rule_flag_ENG 联邦派与公理会派取得多数"
  RULE_OPTION_ENG_START_ELECTION_SYNDICALIST_FEDERATIONIST_DESC:0 "联邦派与公理会派联盟在1936年劳工联合会议中取得多数席位。"
  RULE_OPTION_ENG_START_ELECTION_RADICAL_SOCIALIST_AUTONOMIST:0 "£KR_game_rule_flag_ENG_radical_socialist 自治派取得多数"
  RULE_OPTION_ENG_START_ELECTION_RADICAL_SOCIALIST_AUTONOMIST_DESC:0 "自治派在1936年劳工联合会议中取得多数席位。"
@@ -16,7 +16,7 @@
  RULE_OPTION_ENG_REVOLUTION_SUCCESS_DESC:0 "奥斯瓦尔德·莫斯利成功夺了取政权并准备将不列颠联盟改造为准则派的理想之国。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 1936年劳工联合会议§!中选择§C准则派取得多数席位§!"
  FRA_START_ELECTION:0 "£KR_game_rule_flag_FRA 1936年公社选举"
  RULE_OPTION_FRA_START_ELECTION_RANDOM:0 "默认"
- RULE_OPTION_FRA_START_ELECTION_RANDOM_DESC:0 "劳工总议会内部的反对派已经对马索·皮维尔发起了一场不信任投票，后者为了应对这一局势决定提前组织大选，选出新一批劳工总议会及委员会成员。"
+ RULE_OPTION_FRA_START_ELECTION_RANDOM_DESC:0 "劳工总议会内部的反对派已经对马索·皮韦尔发起了一场不信任投票，后者为了应对这一局势决定提前组织大选，选出新一批劳工总议会及委员会成员。"
  RULE_OPTION_FRA_START_ELECTION_SYNDICALIST_TRAVAILLEUR:0 "£KR_game_rule_flag_FRA 工团派取得多数"
  RULE_OPTION_FRA_START_ELECTION_SYNDICALIST_TRAVAILLEUR_DESC:0 "工团派在1936年选举中取得了多数席位。"
  RULE_OPTION_FRA_START_ELECTION_RADICAL_SOCIALIST_ANARCHISTE:0 "£KR_game_rule_flag_FRA 无政府派取得多数"
@@ -195,10 +195,10 @@
  RULE_OPTION_HOL_ELECTION_1937_SDAP_WIN_RSAP_OVERTHROW_SYSTEM_GERMAN_ACQUIESCENCE_DESC:0 "激进社会主义者推翻了海牙的资产阶级政府并创立了巴达维亚公社。极权主义的爱国运动最终夺得权力。作为回应，德国决定对公社宣战。"
  RULE_OPTION_HOL_ELECTION_1937_SDAP_WIN_JUNTA_PERMENANT_STABILITY:0 "£KR_game_rule_flag_HOL 军政府"
  RULE_OPTION_HOL_ELECTION_1937_SDAP_WIN_JUNTA_PERMENANT_STABILITY_DESC:0 "大萧条破坏了荷兰的稳定，伊扎克·赖因德斯将军夺取国家政权并建立了军政府。"
- RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_SWART:0 "£KR_game_rule_flag_HOL_paternal_autocrat 国家复兴联盟的反动独裁"
- RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_SWART_DESC:0 "国家复兴联盟的反动派攫取了荷兰的大权并创立了反动的独裁统治，挫败了民粹派的宫廷政变。"
- RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_VAN_GEELKERKEN:0 "£KR_game_rule_flag_HOL_national_populist 国家复兴联盟的民粹独裁"
- RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_VAN_GEELKERKEN_DESC:0 "国家复兴联盟的反动派攫取了荷兰的大权并创立了反动的独裁统治，随后被党内青年民粹派的一场政变取代。"
+ RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_SWART:0 "£KR_game_rule_flag_HOL_paternal_autocrat 民族复兴联盟的反动独裁"
+ RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_SWART_DESC:0 "民族复兴联盟的反动派攫取了荷兰的大权并创立了反动的独裁统治，挫败了民粹派的宫廷政变。"
+ RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_VAN_GEELKERKEN:0 "£KR_game_rule_flag_HOL_national_populist 民族复兴联盟的民粹独裁"
+ RULE_OPTION_HOL_ELECTION_1937_VHN_WIN_ALONE_VAN_GEELKERKEN_DESC:0 "民族复兴联盟的反动派攫取了荷兰的大权并创立了反动的独裁统治，随后被党内青年民粹派的一场政变取代。"
  SWI_SAVOYARD_CRISIS:0 "£KR_game_rule_flag_SWI 萨伏伊危机"
  RULE_OPTION_SWI_SAVOYARD_CRISIS_RANDOM:0 "默认"
  RULE_OPTION_SWI_SAVOYARD_CRISIS_RANDOM_DESC:0 "在法兰西公社的支持下，罗曼蒂与上萨瓦地区的工团主义革命者起来反抗瑞士政府，这便是国际闻名的“萨伏伊危机”。政府当局以何种方式应对这一事件都将决定性地影响瑞士人民的未来。"
@@ -317,7 +317,7 @@
  RULE_OPTION_CAN_BRITISH_KING_ABDICATES:0 "£KR_game_rule_flag_CAN 爱德华八世退位"
  RULE_OPTION_CAN_BRITISH_KING_ABDICATES_DESC:0 "英国的王冠虽然戴在了爱德华王子的头上，但他最终会退位（假设什么事情会让他不得不滚蛋）。那么命运将会决定爱德华的哪位兄弟将会得到这顶王冠。"
  RULE_OPTION_CAN_BRITISH_KING_ALBERT:0 "£KR_game_rule_flag_CAN 阿尔伯特一世"
- RULE_OPTION_CAN_BRITISH_KING_ALBERT_DESC:0 "一旦爱德华国王退位（假设有可能退位的话），王位就会落在他最年长的弟弟、假定继承人艾伯特王子身上。"
+ RULE_OPTION_CAN_BRITISH_KING_ALBERT_DESC:0 "一旦爱德华国王退位（假设有可能退位的话），王位就会落在他最年长的弟弟、假定继承人阿尔伯特王子身上。"
  RULE_OPTION_CAN_BRITISH_KING_HENRY:0 "£KR_game_rule_flag_CAN 亨利九世"
  RULE_OPTION_CAN_BRITISH_KING_HENRY_DESC:0 "一旦爱德华国王退位（假设有可能退位的话），王位就会落在他的二哥亨利王子身上，他有着丰富的军事经验。"
  RULE_OPTION_CAN_BRITISH_KING_GEORGE:0 "£KR_game_rule_flag_CAN 乔治六世"
@@ -385,9 +385,9 @@
  RULE_OPTION_TEX_POST_CIVIL_WAR_LONG:0 "£KR_game_rule_flag_TEX 朗维持权力"
  RULE_OPTION_TEX_POST_CIVIL_WAR_LONG_DESC:0 "休伊·朗在清洗其昔日“盟友”的过程中设法保住了自己的权力。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
  RULE_OPTION_TEX_POST_CIVIL_WAR_MOSELEY:0 "£KR_game_rule_flag_USA 莫斯利掌权"
- RULE_OPTION_TEX_POST_CIVIL_WAR_MOSELEY_DESC:0 "休伊·朗意外失踪后，美国退伍军人协会总指挥乔治·范霍恩·莫斯利宣布他将接管国家政权，直到一位更为合适的领导人现身为止。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
+ RULE_OPTION_TEX_POST_CIVIL_WAR_MOSELEY_DESC:0 "休伊·朗意外失踪后，美国退伍军人协会总指挥乔治·范·霍恩·莫斯利宣布他将接管国家政权，直到一位更为合适的领导人现身为止。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
  RULE_OPTION_TEX_POST_CIVIL_WAR_PELLEY:0 "£KR_game_rule_flag_TEX_commonwealth 佩利发动了一次成功的政变"
- RULE_OPTION_TEX_POST_CIVIL_WAR_PELLEY_DESC:0 "在总统亲信的帮助下，威廉·达德利·佩利及其属下的银衫军发起了一场成功的政变。新政权遵循着以前被边缘化的基督教民族主义意识形态。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
+ RULE_OPTION_TEX_POST_CIVIL_WAR_PELLEY_DESC:0 "在总统亲信的帮助下，威廉·达德利·佩利及其属下的银色军团发起了一场成功的政变。新政权遵循着以前被边缘化的基督教民族主义意识形态。\n§R需要：§!\n§C美利坚联盟国赢得第二次美国内战§!"
  MEX_POST_ASSASSINATION:0 "£KR_game_rule_flag_MEX_syndicalist 谋杀萨帕塔的企图"
  RULE_OPTION_MEX_POST_ASSASSINATION_RANDOM:0 "默认"
  RULE_OPTION_MEX_POST_ASSASSINATION_RANDOM_DESC:0 "一个刺客枪击了萨帕塔总统。刺客被总统卫队所杀，萨帕塔被送到了医院进行急救，他是否能活下来是个问题。"
@@ -592,6 +592,7 @@
  RULE_OPTION_SZC_IND_DESC:0 "刘湘的实业团成功占领了成都，并击退了所有敌人。四川因而投奔奉天势力圈。"
  RULE_OPTION_SZC_OFF:0 "£KR_game_rule_flag_SZC 共和派大获全胜"
  RULE_OPTION_SZC_OFF_DESC:0 "武备系在成都围城战中成功击溃了刘湘部。军官系的共和派与刘湘部残存结成同盟，联手摧垮了衰弱的武备系。四川因而成为共和派的堡垒，在联省派和国民党之间摇摆不定。"
+ YUN_PATH:0 "£KR_game_rule_flag_YUN 共和派堡垒崩塌"
  ICE_FUTURE:0 "£KR_game_rule_flag_ICE 冰岛"
  RULE_OPTION_ICE_ALTHING_ELECTION_RANDOM:0 "默认"
  RULE_OPTION_ICE_ALTHING_ELECTION_RANDOM_DESC:0 "AI将会基于设定好的权重随机选择路线。"
@@ -686,7 +687,7 @@
  RULE_OPTION_BAT_POLITICAL_PATH_SCHIEMANN:0 "£KR_game_rule_flag_BAT 席曼的党派"
  RULE_OPTION_BAT_POLITICAL_PATH_SCHIEMANN_DESC:0 "波罗的德意志民主党继续执政，并继续按照保罗·席曼的政治思想指导国家。"
  RULE_OPTION_BAT_POLITICAL_PATH_KNIGHTHOODS:0 "£KR_game_rule_flag_BAT 传统犹存"
- RULE_OPTION_BAT_POLITICAL_PATH_KNIGHTHOODS_DESC:0 "冯·萨姆松-希梅尔谢纳政府倒台而波罗的骑士团重新夺回了对国家的控制权，他们将致力于维护传统与和谐。"
+ RULE_OPTION_BAT_POLITICAL_PATH_KNIGHTHOODS_DESC:0 "萨姆松-希梅尔谢纳政府倒台而波罗的骑士团重新夺回了对国家的控制权，他们将致力于维护传统与和谐。"
  RULE_OPTION_BAT_POLITICAL_PATH_BROTHERHOOD:0 "£KR_game_rule_flag_BAT 波罗的复兴"
  RULE_OPTION_BAT_POLITICAL_PATH_BROTHERHOOD_DESC:0 "在“黑色星期一”的混乱中，防卫军发动了一场政变，并让波罗的兄弟会掌权，以便将波罗的国转变成一个模范的民族主义国家。"
  RULE_OPTION_BAT_POLITICAL_PATH_RIGA_SOCLIB:0 "£KR_game_rule_flag_BAT_riga 公国陷落 - 席曼的遗产"
@@ -813,6 +814,8 @@
  RULE_OPTION_ENG_REVOLUTION_CROMWELL_DESC:0 "奥斯瓦尔德·莫斯利成功夺取政权并将不列颠联盟改造为准则派理想中的国家，但接下来愤怒的苏格兰和威尔士人民反抗他的统治。他平叛不力，于是T·E·劳伦斯将军发动军事政变，决定以新大护国公的身份接管国家。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 1936年劳工联合会议§!中选择§C准则派取得多数席位§!"
  RULE_OPTION_ENG_REVOLUTION_CINCINNATUS:0 "£KR_game_rule_flag_ENG_england £KR_game_rule_flag_SCT £KR_game_rule_flag_WAL 群岛叛乱 - 恢复社会主义民主"
  RULE_OPTION_ENG_REVOLUTION_CINCINNATUS_DESC:0 "奥斯瓦尔德·莫斯利成功夺取政权并将不列颠联盟改造为准则派理想中的国家，但接下来愤怒的苏格兰和威尔士人民反抗他的统治。他平叛不力，于是T·E·劳伦斯将军发动军事政变，举办选举。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 1936年劳工联合会议§!中选择§C准则派取得多数席位§!"
+ RULE_OPTION_YUN_larp_rule:0 "£KR_game_rule_flag_YUN_larp 重建大唐"
+ RULE_OPTION_YUN_larp_rule_DESC:0 "在接受孤立主义之后，唐继尧将会接受自己起源的真相，致力于重建旧唐朝。"
  ANIMATED_PORTRAITS:0 "动态头像"
  RULE_ANIMATED_PORTRAITS_YES:0 "动态头像"
  RULE_ANIMATED_PORTRAITS_YES_DESC:0 "动态头像会出现"
@@ -822,8 +825,6 @@
  RULE_OPTION_SER_GOVERNMENT_PATH_KING_DESC:0 "塞尔维亚的动荡局面使得博约维奇元帅意了保皇派的要求，前王储被加冕为国王亚历山大二世。"
  RULE_OPTION_SER_GOVERNMENT_PATH_REGENT:0 "£KR_game_rule_flag_SER 沃伊沃达屹立不倒"
  RULE_OPTION_SER_GOVERNMENT_PATH_REGENT_DESC:0 "尽管保皇派和共和派制造了巨大动荡，但博约维奇元帅还是成功地渡过了难关，确保了他对塞尔维亚的统治。"
- RULE_OPTION_SER_GOVERNMENT_PATH_REPUBLIC:0 "£KR_game_rule_flag_SER_republic 宣布共和"
- RULE_OPTION_SER_GOVERNMENT_PATH_REPUBLIC_DESC:0 "保皇派政变失败后，博约维奇元帅转而支持有影响力的共和派人士，塞尔维亚正式成为共和国。"
  RULE_OPTION_FOP_TRADE_UNION_CONGRESS_ARAUCANIA:0 "£KR_game_rule_flag_FOP 阿劳卡尼亚王国"
  RULE_OPTION_FOP_TRADE_UNION_CONGRESS_ARAUCANIA_DESC:0 "巴塔哥尼亚的原住民将在阿尔弗雷多·丰特试图政变工团政府所造成的混乱中夺取权力，并重建阿劳卡尼亚的土著王国。"
  LIB_BUSHWAR:0 "£KR_game_rule_flag_LIB £KR_game_rule_flag_Westafrika 利比里亚丛林战争"
@@ -839,18 +840,26 @@
  RULE_OPTION_FNG_MING_DESC:0 "张作霖将会被日本更愿意与之共事的人替代，之后协和会的君主派将会在奉天复辟明朝。"
  RULE_OPTION_FNG_QING:0 "£KR_game_rule_flag_QIE 重建大清"
  RULE_OPTION_FNG_QING_DESC:0 "张作霖将会被日本更愿意与之共事的人替代，之后协和会的君主派将会在奉天复辟川岛芳子的大清王朝。"
+ RULE_OPTION_LEC_TRIADS:0 "£KR_game_rule_flag_LEC_china_triad 猴头之夜"
+ RULE_OPTION_LEC_TRIADS_DESC:0 "使馆城市对他们的金融财产采取的措施将会是灾难性的，导致全部破产，三合会将会在之后掌权。"
+ RULE_OPTION_LEC_TRIADS_JIANG:0 "£KR_game_rule_flag_LEC_china_triad 猴头之夜 - 江青得胜"
+ RULE_OPTION_LEC_TRIADS_JIANG_DESC:0 "使馆城市将会灾难性地管控他们的金融资产，导致自己走向崩溃。江青领导下的三合会将会在之后掌权，进行毒品，特别是鸦片贸易。"
+ RULE_OPTION_LEC_TRIADS_SEN:0 "£KR_game_rule_flag_LEC_china_triad 猴头之夜 - 杜月笙得胜"
+ RULE_OPTION_LEC_TRIADS_SEN_DESC:0 "使馆城市对他们的金融财产采取的措施将会是灾难性的，导致全部破产，杜月笙领导的三合会将会在之后掌权，并建立以贩卖军火、假冒伪劣和坑蒙拐骗为核心的“传统”三合会。"
+ RULE_OPTION_LEC_TRIADS_JINRONG:0 "£KR_game_rule_flag_LEC_china_triad 猴头之夜 - 黄金荣得胜"
+ RULE_OPTION_LEC_TRIADS_JINRONG_DESC:0 "使馆城市对他们的金融财产采取的措施将会是灾难性的，导致全部破产，黄金荣领导下的三合会将会在之后掌权，并专心搞事走私。"
  RULE_CONFERENCE_OPTIONS:0 "和平会议"
  RULE_OPTION_CONFERENCE_STANDARD:0 "默认"
  RULE_OPTION_CONFERENCE_STANDARD_DESC:0 "AI将根据核心、宣称、野心，是否能与自己相连而索取地区。"
  RULE_OPTION_CONFERENCE_PLAYER_PRIMACY:0 "玩家主导"
  RULE_OPTION_CONFERENCE_PLAYER_PRIMACY_DESC:0 "当玩家参与一场和平会议时，AI不会在会议中要求任何地区。启用该规则后，游戏中将出现调试决议，允许玩家关闭或重新开启。"
- KR_STATE_TRANSFER_TOOL_OPTIONS:0 "省份&国家转移工具"
+ KR_STATE_TRANSFER_TOOL_OPTIONS:0 "地区与国家转移工具"
  RULE_OPTION_STATE_TRANSFER_TOOL_STANDARD:0 "不生效"
- RULE_OPTION_STATE_TRANSFER_TOOL_STANDARD_DESC:0 "省份与国家转移工具将会禁用，游戏过程中也不会显示相关图形界面。注：如果在钢4启动启动选项中开启了调试功能，那么该设置将不会生效，你可以通过调试决议打开省份转移工具。"
+ RULE_OPTION_STATE_TRANSFER_TOOL_STANDARD_DESC:0 "地区与国家转移工具将会禁用，游戏过程中也不会显示相关图形界面。注：如果在钢4启动选项中开启了调试功能，那么该设置将不会生效，你可以通过调试决议打开地区与国家转移工具。"
  RULE_OPTION_STATE_TRANSFER_TOOL_ACTIVE:0 "生效"
- RULE_OPTION_STATE_TRANSFER_TOOL_ACTIVE_DESC:0 "单人游戏版省份与国家转移工具将会默认启用，并会在点击省份时自动显示其图形界面（可以使用Ctrl+H隐藏，或使用调试决议来关闭转移工具）。启用工具将允许在存在的国家中互相转移省份，并添加/移除核心。\n\n§R请谨慎使用，后果自负！§!"
+ RULE_OPTION_STATE_TRANSFER_TOOL_ACTIVE_DESC:0 "单人游戏版地区与国家转移工具将会默认启用，并会在点击地区时自动显示其图形界面（可以使用Ctrl+H隐藏，或使用调试决议来关闭转移工具）。启用工具后可以在现有的国家间互相转移地区，并添加/移除核心。\n\n§R请谨慎使用，后果自负！§!"
  RULE_OPTION_STATE_TRANSFER_TOOL_MULTIPLAYER:0 "多人游戏 - 默认"
- RULE_OPTION_STATE_TRANSFER_TOOL_MULTIPLAYER_DESC:0 "多人游戏版省份与国家转移工具将会默认启用。其工作方式与单人版一致，但玩家只能修改（且不能添加/移除核心）玩家自己控制的国家及其傀儡的省份（部分傀儡不适用，因为他们可能会发动针对玩家所在国的叛乱）。\n\n§R请谨慎使用，后果自负！§!"
+ RULE_OPTION_STATE_TRANSFER_TOOL_MULTIPLAYER_DESC:0 "多人游戏版地区与国家转移工具将会默认启用。其工作方式与单人版一致，但玩家只能修改（且不能添加/移除核心）自己控制的国家及其属国的地区（部分属国不适用，因为他们可能会发动针对玩家所在国的叛乱）。\n\n§R请谨慎使用，后果自负！§!"
  RULE_OPTION_STATE_TRANSFER_TOOL_MP_NO_SUBJECT:0 "多人游戏 - 无法转让附庸"
  RULE_OPTION_STATE_TRANSFER_TOOL_MP_NO_SUBJECT_DESC:0 "工作方式与多人版一致，但玩家无法标记和修改傀儡国省份。\n\n§R请谨慎使用，后果自负！§!"
  EST_PATH:0 "£KR_game_rule_flag_EST 西尔克的决定"
@@ -1145,7 +1154,7 @@
  RULE_OPTION_DEC_STANDARD_DESC:0 "各类调试决议（比如触发第二次美国内战等）已禁用，仅在调试模式开启时可用。"
  RULE_OPTION_DEBUG_DEC_ON:0 "启用"
  RULE_OPTION_DEBUG_DEC_ON_DESC:0 "各类调试决议（比如触发第二次美国内战等）已启用，无视调试模式是否开启。"
- RULE_OPTION_LAT_PATH_NATPOP:0 "£KR_game_rule_flag_LAT_national_populist 萨文科夫派掌权"
+ RULE_OPTION_LAT_PATH_NATPOP:0 "£KR_game_rule_flag_LAT_goppers_flag 萨文科夫派掌权"
  RULE_OPTION_LAT_PATH_NATPOP_DESC:0 "鲍里斯·萨文科夫的密友卡尔利斯·戈珀斯在拉脱维亚分裂之际掌权。\n他将率领拉脱维亚走出当前危机，并力求在俄国保护下恢复波罗的总督府。\n§R需要：§!\n在§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!规则下设定§C公国崩溃§!"
  RULE_CHINA_ALIGNMENT:0 "中国联盟阵营界面"
  RULE_OPTION_CHINA_DEFAULT:0 "默认（只对中国地区国家开放）"
@@ -1573,10 +1582,6 @@
  RULE_GERMANY_FLAGS_REAL_DESC:0 "德国将使用史实国旗。"
  RULE_OPTION_SRI_START_ELECTION_GARIBALDI:0 "£GFX_KR_game_rule_flag_SRI_confederation 加里波第二世"
  RULE_OPTION_SRI_START_ELECTION_GARIBALDI_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程。不过，两国究竟能不能冰释前嫌，这没人说得准。"
- RULE_OPTION_SRI_START_ELECTION_GARIBALDI_REPUBLIC:0 "£GFX_KR_game_rule_flag_SRI_confederation 新共和国"
- RULE_OPTION_SRI_START_ELECTION_GARIBALDI_REPUBLIC_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程。不过，由于共和政府不接受任何形式的君主制，两国的谈判最终无果而终。"
- RULE_OPTION_SRI_START_ELECTION_GARIBALDI_SARDINIA:0 "£GFX_KR_game_rule_flag_SRI_confederation £KR_game_rule_flag_SRD 撒丁联统"
- RULE_OPTION_SRI_START_ELECTION_GARIBALDI_SARDINIA_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程，最终实现了撒丁和北意大利的联合君主立宪制。"
  RULE_OPTION_PAP_NEWCONCLAVE_AUTHDEM:0 "£KR_game_rule_flag_PAP 哈德良七世"
  RULE_OPTION_PAP_NEWCONCLAVE_AUTHDEM_DESC:0 "奉行威权民主立场的哈德良七世当选。"
  RULE_OPTION_PAP_NEWCONCLAVE_SOCLIB_DESC:0 "奉行社会自由立场的本笃十六世当选。"
@@ -1678,7 +1683,7 @@
  RULE_OPTION_NFA_FOREIGN_POLICY_LATIN: "£KR_game_rule_flag_NFA £KR_game_rule_flag_CAR 拉丁联盟"
  RULE_OPTION_NFA_FOREIGN_POLICY_LATIN_DESC: "一有机会，法国就会加入拉丁联盟。"
  RULE_OPTION_NFA_FOREIGN_POLICY_EXPAND: "£KR_game_rule_flag_NFA 高歌猛进，壮哉法兰西"
- RULE_OPTION_NFA_FOREIGN_POLICY_EXPAND_DESC: "光复本土后，法国将再度剑指世界之巅。"
+ RULE_OPTION_NFA_FOREIGN_POLICY_EXPAND_DESC: "光复本土后，法国将独孤求败，再度剑指世界之巅。"
  RULE_OPTION_NFA_FOREIGN_POLICY_EXPAND_ENTENTE: "£KR_game_rule_flag_NFA £KR_game_rule_flag_CAN 壮哉法兰西 - 协约国"
  RULE_OPTION_NFA_FOREIGN_POLICY_EXPAND_ENTENTE_DESC: "光复本土后，法国将与协约国一道，再度剑指世界之巅。"
  RULE_OPTION_NFA_FOREIGN_POLICY_EXPAND_FRENCH_FACTION: "£KR_game_rule_flag_NFA 壮哉法兰西 - 法兰西集团"
@@ -1775,7 +1780,7 @@
  RULE_OPTION_NFA_DEMOCRACY_PATH_NATPOP_DESC: "贝当功成身退后，共和国举行了流亡后的首届民主选举，奉行国家民粹主义的法兰西行动获得了民众的认同。"
  RULE_OPTION_NFA_DEMOCRACY_PATH_MONARCH: "£KR_game_rule_flag_NFK_DEM 未曾设想的复辟"
  RULE_OPTION_NFA_DEMOCRACY_PATH_MONARCH_DESC: "奉行国家民粹主义的法兰西行动赢得了第二届民主选举。若此前法兰西行动已赢得第一届选举，那么他们就会复辟君主制。"
- NFL_POLITICAL_PATH:0 "£KR_game_rule_flag_NFL 委任政府"
+ NFL_POLITICAL_PATH:0 "£KR_game_rule_flag_NFL 纽芬兰委任政府"
  RULE_OPTION_NFL_POLITICAL_PATH_RANDOM:0 "默认"
  RULE_OPTION_NFL_POLITICAL_PATH_RANDOM_DESC:0 "在黑色星期一的摧残下，纽芬兰的经济状况一落千丈，民选政府再无力维持自身的运转，而§X王家委任政府§!将肩负起领导国家的重任。"
  RULE_OPTION_NFL_POLITICAL_PATH_COMMISSION:0 "£KR_game_rule_flag_NFL 委任延续"
@@ -1786,6 +1791,39 @@
  RULE_OPTION_NFL_POLITICAL_PATH_SYNDICALIST_DESC:0 "§X委任政府§!非但没有行使好非民主代表的职责，还听信商贾精英们的话语，积极打压新生的劳工运动，逼得纽芬兰的各大工会没法，只能勾搭上§V不列颠联盟§!，意欲借后者之手取回对国家的控制。"
  RULE_OPTION_NFL_POLITICAL_PATH_CANADIAN_ANNEXATION:0 "£KR_game_rule_flag_CAN 加拿大一体化"
  RULE_OPTION_NFL_POLITICAL_PATH_CANADIAN_ANNEXATION_DESC:0 "在黑色星期一的摧残下濒临破产的纽芬兰政府转眼望向了东方的宗主国，希望实现两国的§B一体化§!，而加拿大人也同意了这一想法，让其成为了加拿大的第十个省。"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_REPUBLIC:0 "£GFX_KR_game_rule_flag_SRI_confederation 新共和国"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_REPUBLIC_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程。不过，由于共和政府不接受任何形式的君主制，两国的谈判最终无果而终。"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_SARDINIA:0 "£GFX_KR_game_rule_flag_SRI_confederation £KR_game_rule_flag_SRD 撒丁联统"
+ RULE_OPTION_SRI_START_ELECTION_GARIBALDI_SARDINIA_DESC:0 "在意大利社会主义共和国的第四届大会中，没有人取得政府中的多数席位。僵持之下，朱塞佩·加里波第二世将军开进首都，接管了政府，并开始了同撒丁王国的和解进程，最终实现了撒丁和北意大利的联合君主立宪制。"
+ RULE_OPTION_SER_GOVERNMENT_PATH_REPUBLIC_MARLIB:0 "£KR_game_rule_flag_SER_republic 共和宣言-市场自由派"
+ RULE_OPTION_SER_GOVERNMENT_PATH_REPUBLIC_MARLIB_DESC:0 "保皇派政变失败，沃伊沃达·博约维奇转而支持影响力甚高的共和派，塞尔维亚正式成为共和国。 市场自由派赢得了首届共和国选举。"
+ RULE_OPTION_SER_GOVERNMENT_PATH_REPUBLIC_SOCCON:0 "£KR_game_rule_flag_SER 共和宣言-社会保守派"
+ RULE_OPTION_SER_GOVERNMENT_PATH_REPUBLIC_SOCCON_DESC:0 "保皇派政变失败，沃伊沃达·博约维奇转而支持影响力甚高的共和派，塞尔维亚正式成为共和国。 社会保守派赢得了首届共和国选举。"
+ RULE_OPTION_SER_GOVERNMENT_PATH_BLACK_HAND:0 "£KR_game_rule_flag_SER 黑手崛起"
+ RULE_OPTION_SER_GOVERNMENT_PATH_BLACK_HAND_DESC:0 "在沃伊沃达·博约维奇宣布王储不会归国后，国家民粹主义的黑手崛起，以其运动为推手强行将国王推上了王位。"
+ SER_EXPANSIONISM:0 "£KR_game_rule_flag_SER 塞尔维亚的雄心"
+ RULE_OPTION_SER_EXPANSIONISM_RANDOM:0 "默认"
+ RULE_OPTION_SER_EXPANSIONISM_RANDOM_DESC:0 ""
+ RULE_OPTION_SER_EXPANSIONISM_GREATER_SERBIA:0 "£KR_game_rule_flag_SER 迈向大塞尔维亚"
+ RULE_OPTION_SER_EXPANSIONISM_GREATER_SERBIA_DESC:0 "塞尔维亚处理妥当其政治局势后，新政府决心只将国家扩展到主要由塞族人组成的地区。"
+ RULE_OPTION_SER_EXPANSIONISM_YUGOSLAVIA:0 "£KR_game_rule_flag_SER_YUG 斯拉夫联邦"
+ RULE_OPTION_SER_EXPANSIONISM_YUGOSLAVIA_DESC:0 "塞尔维亚处理妥当其政治局势后，新政府决心将巴尔干地区的所有斯拉夫民族联合起来，建立一个统一的南斯拉夫国家。"
+ SER_FORPOL:0 "£KR_game_rule_flag_SER 塞尔维亚外交政策"
+ RULE_OPTION_SER_FORPOL_RANDOM:0 "默认"
+ RULE_OPTION_SER_FORPOL_RANDOM_DESC:0 "巴尔干战争告一段落，塞尔维亚需要决定是否与更大的阵营结盟。"
+ RULE_OPTION_SER_FORPOL_ENTENTE:0 "£KR_game_rule_flag_SER £KR_game_rule_flag_CAN 协约国"
+ RULE_OPTION_SER_FORPOL_ENTENTE_DESC:0 "塞尔维亚决定再次加入他们的老朋友协约国。"
+ RULE_OPTION_SER_FORPOL_RUSSIA:0 "£KR_game_rule_flag_SER £KR_game_rule_flag_RUS 俄罗斯"
+ RULE_OPTION_SER_FORPOL_RUSSIA_DESC:0 "塞尔维亚将决定加入斯拉夫同胞的行列，与俄罗斯集团结盟。"
+ RULE_OPTION_SER_FORPOL_BELGRADE_PACT:0 "£KR_game_rule_flag_SER 维持贝尔格莱德条约"
+ RULE_OPTION_SER_FORPOL_BELGRADE_PACT_DESC:0 "塞尔维亚决定将命运掌握在自己手中，不与全球任何阵营结盟，而是继续领导自己的阵营。"
+ NFL_MIKMAQ_LAND_NEGOTIATION:0 "£KR_game_rule_flag_NFL_WAB 米克马克祖地谈判"
+ RULE_OPTION_NFL_MIKMAQ_LAND_NEGOTIATION_RANDOM:0 "默认"
+ RULE_OPTION_NFL_MIKMAQ_LAND_NEGOTIATION_RANDOM_DESC:0 "渥太华政府同意米克马克人的东部阿尔冈昆地要求与否，全看天意。"
+ RULE_OPTION_NFL_MIKMAQ_LAND_NEGOTIATION_YES:0 "£KR_game_rule_flag_NFL_WAB 加拿大同意"
+ RULE_OPTION_NFL_MIKMAQ_LAND_NEGOTIATION_YES_DESC:0 "加拿大欣然同意了米克马克人的要求。"
+ RULE_OPTION_NFL_MIKMAQ_LAND_NEGOTIATION_NO:0 "£KR_game_rule_flag_NFL_WAB 加拿大拒绝"
+ RULE_OPTION_NFL_MIKMAQ_LAND_NEGOTIATION_NO_DESC:0 "加拿大政府拒绝交出新斯科舍、新不伦瑞克和爱德华王子岛。"
 
 
 
