--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -555,9 +555,9 @@
  ETS_timur_idea: "铁木尔之治"
  ETS_republic_idea: "共和新秩序"
  ETS_change_popularities: "国家民粹主义支持率变化：[?ETS_change_tooltip1|+%]\n威权民主主义支持率变化：[?ETS_change_tooltip2|+%]"
- ETS: "东突厥斯坦"
- ETS_ADJ: "东突厥斯坦"
- ETS_DEF: "东突厥斯坦"
+ ETS: "新疆"
+ ETS_ADJ: "新疆"
+ ETS_DEF: "新疆"
  ETS_totalist: "东突厥斯坦人民共和国"
  ETS_totalist_ADJ: "东突厥斯坦"
  ETS_totalist_DEF: "东突厥斯坦人民共和国"
