--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -3634,6 +3634,9 @@
  lngst.50.t:0 "甘红血染"
  lngst.50.d:0 "可口可乐，那抓人眼球的包装，恰到好处的气泡，入口极致的甘甜，每个品尝过可口可乐的国民都发自心底地喜欢上了它。然而，就是这样美好的东西，却只在深巷小贩和地下酒馆里苟延残喘地活着，任何胆敢僭越百事可乐地位的国民都会被逮捕，扑杀，好似被围猎的巫女。他们中有的住进了西冰库，有的被沉进了汉江，但更多的是被乱枪打死在某个阴沟小巷里，亦或是在一阵突如其来的敲门声后死在开门前的一刹那。\n\n此刻已是深夜两点，亮的发暗的小酒馆里弥漫着硝烟和铁腥味，高木正雄穿着那身衣角笔直的军装好整以暇地坐在吧台，几分钟前还在和他聊着怎么给学校里挑食的女儿带什么饭才行的老板，此刻已经倒在血泊中；邻座那个最爱喝可口可乐的小孩，每次喝多了就恶作剧般冲到他面前朝他打嗝的小屁孩，现在瞳孔涣散，手里紧握的钢签被无力地丢下，嘴角流着血，卧在他身旁；那个总是望着他发呆，时不时给他添上满杯的可人儿，靓丽的脸上多了两个黑红相间的可怖孔洞，她写满凄美的眼睛再也不能温柔地望向他了。\n\n“多好的饮料啊”，他端着玻璃杯，抿了一小口，看着杯子里鲜红的液体映照着的他。回过身，高木正雄对着门前几支澄亮的手电筒，高高举起了酒杯，好似举起了象征着冠军的奖杯，“没喝过这么好的吧，这点就送你们了，希望...”\n\n“砰”地一声枪响，打断了他的话。高木正雄望着胸前不断扩张的红色，“真的好像可口可乐一样啊”，他忽然想到，“喝完再走，那可真好。”他露出了解脱般的笑容，随后一阵疾风骤雨般的枪声在这个阴暗逼仄的小酒馆里爆发。然而在那暴风雨般的激昂乐章下，如血的革命种子已经悄然播撒。"
  lngst.50.a:0 "会吗？"
+ lngst.51.t:0 "可乐天皇"
+ lngst.51.d:0 "当一瓶可口可乐接过天丛云剑和八尺玉，正式成为新的日本天皇后，舆论的漩涡从东京到京都，如同核弹爆炸一般席卷了整个日本。\n\n人们首先想到的是伦理问题，如果可口可乐成为了天皇，那么那些商店里摆的一排一排的饮料，是否是天皇的子嗣或者表亲，甚至是天皇本人，那人们应当如何向一个货架鞠躬？而政府迅速解决了人们的疑惑，这些饮料是天皇的分身，而购买并饮用可口可乐，就是在享受天皇的恩泽。\n\n当付出35日元就能表达效忠天皇时，民众反而体现出极大的热情，这可能是可乐天皇存在合理性的来源。毕竟之前，需要毫无保护的万岁冲锋或者锁住你飞机的驾驶舱撞向敌国军舰，才能表达对天皇的忠心。\n\n在一些商业场所，商家们的反应却各不相同。一些头脑灵活的店主迅速嗅到了商机，他们推出了与可口可乐天皇相关的周边产品，印有可乐瓶天皇形象的T恤、马克杯等，吸引了不少国内外顾客抢购。任天堂也决定制作《可乐天皇传说》系列桌游。随着天皇这一古老的IP如今又焕发新生机，带来极高的商业利润，资本市场愈发的满足这一决定， 料亭里人们衣冠楚楚，觥筹交错，酒杯里全被换成了可口可乐，正享受着这一盛宴。\n\n毫无疑问的，可口可乐公司是这一事件最大的赢家，在9月9日9点9时9分9秒，在可口可乐公司新任总裁、大可口帝国的首相岸信界向公众宣布了可口可乐的全新logo，一只蓝色的双头鸟，又形似蜿蜒的火焰。可口可乐公司解释这些火焰源自于日本绳纹时代著名的火焰陶器，升腾的火焰又像一只只眼睛。\n\n 而漩涡的中心，东京都千代田区皇居，这里无比安静，毕竟新天皇除了偶尔冒出几粒气泡，并不对外发表任何政治意见，堪称立宪君主的楷模。"
+ lngst.51.a:0 "要来一瓶吗？"
 
  #军改
  GXC_shang_tuan_jun_shi_gai_ge:0 "暴力亦是商品"
@@ -3740,6 +3743,18 @@
  GXC_Pepsi_is_all:0 "§R魔鬼的酒酿存在于人世间§!"
  GXC_Pepsi_is_rise:0 "§R平壤升起了金太阳§!"
  GXC_jue_fa_shua_guo_shui_state:0 "百事思想塔"
+
+ GXC_Coke:0 "大可口帝国国策树"
+ GXC_jia_mian_xin_tian_huang:0 "加冕新天皇"
+ GXC_jia_mian_xin_tian_huang_desc:0 "过去那个端坐皇位之人不过是一介贪生怕死之辈，是祸津日神的子嗣，他有什么资格自称自己是天照大神的继承人？真正的继承人只有一位，那就是至曜的可口可乐殿下，他是天照大神的化身，是大和民族的救世主，是大和民族的唯一希望。"
+ GXC_huang_xin_guo_ming:0 "唤醒国民"
+ GXC_huang_xin_guo_ming_desc:0 "起来，大和民族，你们的救世主已经降临，天照大神已经降下了他的化身，无需担忧，无需恐惧，只需跟随祂的步伐，我们将走向光明的未来。起来，大和民族，那太阳已经升起，那旧日的祸首已经灰飞烟灭，我们将迎来新的黎明。起来，大和民族！"
+ GXC_ke_le_xian_bing:0 "可乐宪兵"
+ GXC_ke_le_xian_bing_desc:0 "所有人每天早上起来的第一件事便是为可乐天皇祈祷，每天晚上睡前的第一件事也是向可乐天皇祈祷，每天都必须思考自己有没有辜负可乐天皇。一支全新的部队将监管这一切，要确保每一位国民都对可乐天皇保有最虔诚的信仰。"
+ GXC_ba_hong_yi_yu:0 "可口长远，八纮一宇！"
+ GXC_ba_hong_yi_yu_desc:0 "上则答乾灵授国之德，下则弘皇孙养正之心。然后兼六合以开都，掩八纮而为宇，不亦可乎！八纮一宇，七生报国，让可口可乐的光辉照耀这世间的每一个角落，彻底毁灭那些腥臭肮胀的马桶水！"
+ coco_cola_is_all:0 "可口可乐就是一切！"
+ GXC_coco_cola_is_all:0 "§R我皇御统传千代，一直传到八千代，直到小石变巨岩，直到岩上长青苔§!"
 
 #百色起义
  GXC_BAI: "广西起义军"
