--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -578,11 +578,11 @@
  guides.123.d:0 "问：巴林死后如何选出各种德属东亚领导人？\n\n答：在“柏林当局任命新政府”事件中直接选赫尔穆特·冯·穆克（社保）、约西亚斯亲王（威民）、威廉·海耶（家独）。\n\n问：如何避免印度支那起义？\n\n答：在“平定公社运动”事件中，如果想要和平解决（事件选项一），首先保证社会主义者与民族主义者势力都低于50（§Y已成威胁§!），同时确保社会主义者势力低于民族主义者势力，同时§O印度支那服从度§!大于7。如果选择镇压，需要保证社会主义者与民族主义者势力都低于65（§O燎原之火§!），同时服役人数超过200k,并保证§P印度支那掌控度§!大于8。\n\n问：我想玩舍尔纳线图图人怎么办？\n\n答：选海耶触发印支战争，并且打输。之后舍尔纳就会让海耶滚蛋。\n\n问：我想玩民主线怎么办？\n\n答：虽然不知道你为什么要玩一条还没做空壳线路，但你还是可以玩穆克，走右线改革殖民地（不用放出越南），完成改革点完最后一个国策就可以点开放党禁国策走民主选举。\n\n问：我海盗线和中央党线呢？\n\n答：没做，等二期德属东亚更新吧。\n\n问：我想玩越南\n\n答：走穆克线，在两次保大的改革中都同意，在之后点国策以越治越时放出越南就可以了。"
  guides.123.a:0 "帅到"
  HNN_guidesnum:0 "§C湖南§!有§G6§!条路线指南。"
- guides.1000.t:0 "湖南路线指南"
- guides.1000.d:0 "§M民选政府？§!（§P社保、社自、威民§!）\n£white_dot 在汤芗铭是否废除省议会的事件中选§Y维持省议会§!，然后直接选。\n£white_dot 让赵恒惕选举胜利，触发工团起义后，在最后一个事件中选择赵恒惕胜利。并在之后的赵恒惕发癫事件里选第二个大宋就会如闪电般归来。\n\n§M督理掌控全局？§!（§c家独§!）\n£white_dot §Y解散省议会§!，然后在限时任务结束前完成对应国策。\n£white_dot 在事件链中让汤芗铭一直对佛教徒妥协，就能让佛教徒政变。（该路线不能再转到三期普渡或工团）\n£white_dot §b雅利安佛教神权国§! 使用佛教线攻占上海，之后就会触发事件链，再次一直妥协忽视就对了。\n\n§M国民党？§!（§c社自、社保、社民§!）\n£white_dot §Y解散省议会§!，然后让国民党击败汤芗铭。\n£white_dot 进程潜线，完成国策“防范颠覆分子”，在事件中选择打压何键。之后何键就会发动政变。\n\n§M三期普渡？§!（§c民粹§!）\n£white_dot §Y解散省议会§!，等一贯道起义倒计时结束。\n\n§M工团党起义？§!（§P极权、工团、激社§!）\n£white_dot 第一种：§Y解散省议会§!，等工团起义倒计时结束。\n£white_dot 第二种：第二种，§Y维持省议会§!，在选举结束后的起义事件链中让工团赢。\n£white_dot 子路线：\n£white_dot £white_dot 彭德怀：军队派经济政策、强硬派外交政策。\n£white_dot £white_dot 董必武：文官派经济政策、强硬派外交政策。\n£white_dot £white_dot 何叔衡：文官派经济政策、妥协派外交政策。\n\n除此以外各路线都还有着其他一些进线方式，敬请探索。"
- guides.1000.a:0 "去中华人民共和国页面"
+ guides.1000.t:0 "湖南路线指南（统一前路线）"
+ guides.1000.d:0 "§M民选政府？§!（§P社保、社自、威民§!）\n£white_dot 在汤芗铭是否废除省议会的事件中选§Y维持省议会§!，然后直接选。\n£white_dot 让赵恒惕选举胜利，触发工团起义后，在最后一个事件中选择赵恒惕胜利。并在之后的赵恒惕发癫事件里选第二个大宋就会如闪电般归来。\n\n§M督理掌控全局？§!（§c家独§!）\n£white_dot §Y解散省议会§!，然后在限时任务结束前完成对应国策。\n£white_dot 在事件链中让汤芗铭一直对佛教徒妥协，就能让佛教徒政变。（该路线不能再转到三期普渡或工团）\n£white_dot §b雅利安佛教神权国§! 使用佛教线攻占上海，之后就会触发事件链，再次一直妥协忽视就对了。\n\n§M国民党？§!（§c社自、社保、社民§!）\n£white_dot §Y解散省议会§!，然后让国民党击败汤芗铭。\n£white_dot 进程潜线，完成国策“防范颠覆分子”，在事件中选择打压何键。之后何键就会发动政变。\n\n§M三期普渡？§!（§c民粹§!）\n£white_dot §Y解散省议会§!，等一贯道起义倒计时结束。\n\n§M工团党起义？§!（§P极权、工团、激社§!）\n£white_dot 第一种：§Y解散省议会§!，等工团起义倒计时结束。\n£white_dot 第二种：第二种，§Y维持省议会§!，在选举结束后的起义事件链中让工团赢。\n£white_dot 子路线：\n£white_dot £white_dot 彭德怀：军队派经济政策、强硬派外交政策。\n£white_dot £white_dot 董必武：文官派经济政策、强硬派外交政策。\n£white_dot £white_dot 何叔衡：文官派经济政策、妥协派外交政策。\n\n除此以外各路线都还有着其他一些进线方式，敬请探索。§R本页面仅涉及统一前路线。§!"
+ guides.1000.a:0 "去中华人民共和国页面（统一后路线）"
  guides.1000.b:0 "帅到"
- guides.1001.t:0 "中华人民共和国路线指南"
+ guides.1001.t:0 "中华人民共和国路线（统一后路线）指南"
  guides.1001.d:0 "问：彭德怀？\n\n答：统一前的工团路线中让彭德怀上台，然后在政协事件中维持军管。\n\n问：邓小平、高岗、刘少奇、周恩来、陈云、习仲勋、胡耀邦？\n\n答：在政协会议选举事件链里面选就完事了，让任意一派支持度达到最高。如果谁都没有达成胜出林伯渠就会上任（没有专属国策）。其中邓小平-极权派-极权主义，刘少奇、高岗-正统派-工团主义，陈云、周恩来-技官派-激进社会主义，习仲勋、胡耀邦-市场派-社会自由主义。\n\n问：特科政变？\n\n答：有两种方式。\n 第一种是让邓小平上台开启整风然后一直扩大化，最后康生就会政变，但是这种方式只能让康生上台。\n 第二种则是让邓小平、高岗、周恩来其一上台，完成改组中社部后杀掉汪精卫、胡汉民、同意戴笠加入、杀掉周佛海、不给特科涨工资。最后特科就会政变，你可以选择想要的那位上台。\n 不用担心记不住，政变链的选项内会有提示的。\n\n问：钱学森/郭沫若/陈毅？\n\n答：让周恩来上台，组建中科院，然后选你想要上台的那位当院长，在完成周恩来的最后一个国策的一段时间后，就会出放权事件，选择废除对应的院长就会上台。不废除，周恩来就会换成技官社会主义继续执政（没有专属国策）\n\n问：林彪、贺龙、叶剑英的三头同盟？\n\n答：用第二种方式让中社部上台，在大清洗决议中不断杀人，且中途事件也不要停手，军队就会政变。在之后的三头同盟决议中让你想玩的那个威望超过80%。\n\n问：毛泽东？\n\n答：在除三头同盟外任何PROC路线中让土地改革严重失败"
  guides.1001.a:0 "返回"
  guides.1001.b:0 "帅到"
