--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -555,9 +555,9 @@
  ETS_timur_idea: "铁木尔之治"
  ETS_republic_idea: "共和新秩序"
  ETS_change_popularities: "国家民粹主义支持率变化：[?ETS_change_tooltip1|+%]\n威权民主主义支持率变化：[?ETS_change_tooltip2|+%]"
- ETS: "新疆"
+ ETS: "东突厥斯坦"
  ETS_ADJ: "新疆"
- ETS_DEF: "新疆"
+ ETS_DEF: "东突厥斯坦"
  ETS_totalist: "东突厥斯坦人民共和国"
  ETS_totalist_ADJ: "东突厥斯坦"
  ETS_totalist_DEF: "东突厥斯坦人民共和国"
@@ -621,6 +621,8 @@
  TRK_get_ye_shi: "已失守 £trigger_no"
  UZB_get_no_shi: "未失守 £trigger_yes"
  UZB_get_ye_shi: "已失守 £trigger_no"
+ ETS_attack_rus_tooltip: "假如我们选择进攻§g俄罗斯§!的计划，我们将会获得："
+ ETS_attack_china_tooltip: "假如我们选择进攻§P中国军阀§!的计划，我们将会获得："
 
  ETS_tian_shan_de_ying:0 "天山雄鹰"
  ETS_tian_shan_de_ying2:0 "伟大领袖"
@@ -836,6 +838,47 @@
  ETS_xian_dai_hua_desc:0 "传统主义的毒瘤最终在先锋队的祛魅下和中亚这片焕然一新的土地说了再见，因此，西化、城市化、现代化、世俗化、国际主义的红色中亚屹立于世，以一个崭新的姿态登上了国际舞台。"
  ETS_ge_ming_feng_huo:0 "革命烽火"
  ETS_ge_ming_feng_huo_desc:0 "陈旧的观念、落后的制度、封闭的环境在这一场思想风暴中逐渐瓦解，冰雪遇上烈日，无可替代抵挡地消融。新的理念、新的希望如春风般吹遍天山南北，让古老的土地焕发出沙漠的生机与活力。人们的目光不再聚焦脚下的荒漠与山川，而是投向更有希望的未来。旧有的一切在新思想的火焰中归于尘土。"
+
+ ETS_zhua_zhu_shi_ji:0 "抓住时机"
+ ETS_zhua_zhu_shi_ji_desc:0 " "
+ ETS_da_tong_hai_xia:0 "夺取出海口"
+ ETS_da_tong_hai_xia_desc:0 " "
+ ETS_di_ren_de_di_ren:0 "敌人的敌人"
+ ETS_di_ren_de_di_ren_desc:0 " "
+ ETS_nian_sui_wen_sha:0 "碾碎温莎王朝"
+ ETS_nian_sui_wen_sha_desc:0 " "
+ ETS_chong_jie_ao_si_man_ba_quan:0 "终结奥斯曼霸权"
+ ETS_chong_jie_ao_si_man_ba_quan_desc:0 " "
+
+ ETS_xiang_bei_er_wang:0 "十月余火"
+ ETS_xiang_bei_er_wang_desc:0 " "
+ ETS_jia_ru_zhong_ou:0 "加强军备"
+ ETS_jia_ru_zhong_ou_desc:0 " "
+ ETS_yuan_dong_meng_you:0 "远东的盟友"
+ ETS_yuan_dong_meng_you_desc:0 " "
+ ETS_fang_yu_tian_ji:0 "防御天际"
+ ETS_fang_yu_tian_ji_desc:0 " "
+ ETS_wei_xom_uamh_er_zhan:0 "为信仰而战"
+ ETS_wei_xom_uamh_er_zhan_desc:0 " "
+ ETS_fang_yu_bian_jing:0 "防御边疆"
+ ETS_fang_yu_bian_jing_desc:0 " "
+ ETS_ran_qi_feng_huo:0 "燃起烽火"
+ ETS_ran_qi_feng_huo_desc:0 " "
+ ETS_chong_jian_su_wei_ai:0 "重建苏维埃"
+ ETS_chong_jian_su_wei_ai_desc:0 " "
+
+ ETS_chong_fan_zhong_hua:0 "重返中华"
+ ETS_chong_fan_zhong_hua_desc:0 " "
+ ETS_tu_xi_meng_gu_ren:0 "突袭蒙古人"
+ ETS_tu_xi_meng_gu_ren_desc:0 " "
+ ETS_jin_ju_nan_fang:0 "进军南方"
+ ETS_jin_ju_nan_fang_desc:0 " "
+ ETS_chong_gou_zhong_hua_ming_zu:0 "重构中华民族观"
+ ETS_chong_gou_zhong_hua_ming_zu_desc:0 " "
+ ETS_di_san_ci_guo_ge_ming:0 "第三次国民革命"
+ ETS_di_san_ci_guo_ge_ming_desc:0 " "
+ ETS_bei_jin_bei_jin:0 "北京！北京！"
+ ETS_bei_jin_bei_jin_desc:0 " "
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
