--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -840,7 +840,7 @@
  ETS_ge_ming_feng_huo_desc:0 "陈旧的观念、落后的制度、封闭的环境在这一场思想风暴中逐渐瓦解，冰雪遇上烈日，无可替代抵挡地消融。新的理念、新的希望如春风般吹遍天山南北，让古老的土地焕发出沙漠的生机与活力。人们的目光不再聚焦脚下的荒漠与山川，而是投向更有希望的未来。旧有的一切在新思想的火焰中归于尘土。"
 
  ETS_zhua_zhu_shi_ji:0 "抓住时机"
- ETS_zhua_zhu_shi_ji_desc:0 " "
+ ETS_zhua_zhu_shi_ji_desc:0 "尽管我们才从一场残酷的战争中解放出来，我们的人民对于战争也已经产生了一定的厌倦情绪。但是，如今世界格局波谲云诡，帝国主义对世界的控制正在动摇，我们必须抓紧每一分每一秒，同志们，革命不等人。"
  ETS_da_tong_hai_xia:0 "夺取出海口"
  ETS_da_tong_hai_xia_desc:0 " "
  ETS_di_ren_de_di_ren:0 "敌人的敌人"
@@ -851,7 +851,7 @@
  ETS_chong_jie_ao_si_man_ba_quan_desc:0 " "
 
  ETS_xiang_bei_er_wang:0 "十月余火"
- ETS_xiang_bei_er_wang_desc:0 " "
+ ETS_xiang_bei_er_wang_desc:0 "中亚此时俨然成为亚洲的革命堡垒，但这远远不够...当初俄国的同志们以自己的生命为代价，让我们在新疆还能有一息尚存，如今我们绝不能忘记这份恩情，是时候让我们偿还血债，北上解放他们的子孙了。"
  ETS_jia_ru_zhong_ou:0 "加强军备"
  ETS_jia_ru_zhong_ou_desc:0 " "
  ETS_yuan_dong_meng_you:0 "远东的盟友"
@@ -868,7 +868,7 @@
  ETS_chong_jian_su_wei_ai_desc:0 " "
 
  ETS_chong_fan_zhong_hua:0 "重返中华"
- ETS_chong_fan_zhong_hua_desc:0 " "
+ ETS_chong_fan_zhong_hua_desc:0 "无论如何，我们都是中国人，我们的祖先曾经在这片土地上生活过，我们的子孙也将在这片土地上生活。我们的目标是重返中华，让我们的子孙能够在这片土地上生活得更好。"
  ETS_tu_xi_meng_gu_ren:0 "突袭蒙古人"
  ETS_tu_xi_meng_gu_ren_desc:0 " "
  ETS_jin_ju_nan_fang:0 "进军南方"
