--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -842,26 +842,26 @@
  ETS_zhua_zhu_shi_ji:0 "抓住时机"
  ETS_zhua_zhu_shi_ji_desc:0 "尽管我们才从一场残酷的战争中解放出来，我们的人民对于战争也已经产生了一定的厌倦情绪。但是，如今世界格局波谲云诡，帝国主义对世界的控制正在动摇，我们必须抓紧每一分每一秒，同志们，革命不等人。"
  ETS_da_tong_hai_xia:0 "夺取出海口"
- ETS_da_tong_hai_xia_desc:0 " "
+ ETS_da_tong_hai_xia_desc:0 "如今的我们困居内陆外敌环伺，我们必须要扭转这一点，发兵波斯，解放那里的人民，更重要是的获取至关重要的出海口！"
  ETS_di_ren_de_di_ren:0 "敌人的敌人"
- ETS_di_ren_de_di_ren_desc:0 " "
+ ETS_di_ren_de_di_ren_desc:0 "汉人有句俗话，敌人的敌人就是朋友。在他们间还有一个成语用来形容外交关系：远交近攻。为了实现我们的目标，有时候我们不得不和那些帝国主义者合作，只是不得已的妥协。"
  ETS_nian_sui_wen_sha:0 "碾碎温莎王朝"
- ETS_nian_sui_wen_sha_desc:0 " "
+ ETS_nian_sui_wen_sha_desc:0 "英国人给全世界带来的痛苦我们不会忘记，他们丢掉了本土，而如今我们也要让他们丢掉印度，向着德里进军，碾碎英帝国主义的余孽。"
  ETS_chong_jie_ao_si_man_ba_quan:0 "终结奥斯曼霸权"
- ETS_chong_jie_ao_si_man_ba_quan_desc:0 " "
+ ETS_chong_jie_ao_si_man_ba_quan_desc:0 "奥斯曼人的好日子过到头了，受压迫的人民们，站起来，堆倒这些无道的暴君们，让红旗飘遍整个安纳托利亚！"
 
  ETS_xiang_bei_er_wang:0 "十月余火"
  ETS_xiang_bei_er_wang_desc:0 "中亚此时俨然成为亚洲的革命堡垒，但这远远不够...当初俄国的同志们以自己的生命为代价，让我们在新疆还能有一息尚存，如今我们绝不能忘记这份恩情，是时候让我们偿还血债，北上解放他们的子孙了。"
  ETS_jia_ru_zhong_ou:0 "加强军备"
- ETS_jia_ru_zhong_ou_desc:0 " "
+ ETS_jia_ru_zhong_ou_desc:0 "衣服、军粮、军靴、枪支，士兵需要这些，但国家无法向他们不间断提供这些东西。改变这种可悲的状况，虽然是一个令人钦佩的目标，但代价是昂贵的。"
  ETS_yuan_dong_meng_you:0 "远东的盟友"
- ETS_yuan_dong_meng_you_desc:0 " "
+ ETS_yuan_dong_meng_you_desc:0 "外阿穆尔，俄国难民的聚集地，尽管他们是白匪的后裔，但是我们也最好暂时放下，与他们握手言和，一切都是为了光复苏维埃。"
  ETS_fang_yu_tian_ji:0 "防御天际"
- ETS_fang_yu_tian_ji_desc:0 " "
+ ETS_fang_yu_tian_ji_desc:0 "天空是战争的重点，我们无法制造飞机来守卫我们的空域，因此我们最好多造一些防空火炮，我们不能让我们的工厂被敌人的飞机轻易摧毁。"
  ETS_wei_xom_uamh_er_zhan:0 "为信仰而战"
- ETS_wei_xom_uamh_er_zhan_desc:0 " "
+ ETS_wei_xom_uamh_er_zhan_desc:0 "为了无产阶级的利益，拿起武器，行动起来，为了哪个我们共同的明天而战。"
  ETS_fang_yu_bian_jing:0 "防御边疆"
- ETS_fang_yu_bian_jing_desc:0 " "
+ ETS_fang_yu_bian_jing_desc:0 "对于我们而言最好的方法是守住边疆，利用主场优势不断的消耗敌人的有生力量，以此谋求最后的胜利！"
  ETS_ran_qi_feng_huo:0 "燃起烽火"
  ETS_ran_qi_feng_huo_desc:0 " "
  ETS_chong_jian_su_wei_ai:0 "重建苏维埃"
