--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -584,6 +584,9 @@
  ETS_mid_SOV: "中亚苏维埃联盟"
  ETS_mid_SOV_ADJ: "中亚苏维埃联盟"
  ETS_mid_SOV_DEF: "中亚苏维埃联盟"
+ ETS_PRC: "中华人民社会主义民众国"
+ ETS_PRC_ADJ: "中华人民社会主义民众国"
+ ETS_PRC_DEF: "中华人民社会主义民众国"
 
  ETS_ALO: "哈萨克斯坦军区"
  ETS_ALO_ADJ: "哈萨克斯坦军区"
@@ -657,6 +660,7 @@
  ETS_bu_chang_zheng_ce:0 "民族仇杀补偿标准"
  ETS_min_zu_dai_biao:0 "民族代表法案"
  ETS_min_zu_dai_biao_da_hui:0 "民族代表大会"
+ ETS_min_zu_dai_biao_da_hui2:0 "中华民族"
  ETS_xin_ping_jiu_jiu:0 "新瓶装旧酒"
  ETS_military_buff_idea_3:0 "东突厥斯坦解放军"
  ETS_military_buff_idea_4:0 "东突厥斯坦红军军"
@@ -849,6 +853,8 @@
  ETS_nian_sui_wen_sha_desc:0 "英国人给全世界带来的痛苦我们不会忘记，他们丢掉了本土，而如今我们也要让他们丢掉印度，向着德里进军，碾碎英帝国主义的余孽。"
  ETS_chong_jie_ao_si_man_ba_quan:0 "终结奥斯曼霸权"
  ETS_chong_jie_ao_si_man_ba_quan_desc:0 "奥斯曼人的好日子过到头了，受压迫的人民们，站起来，堆倒这些无道的暴君们，让红旗飘遍整个安纳托利亚！"
+ ETS_chong_fan_gao_jia_suo:0 "重返高加索"
+ ETS_chong_fan_gao_jia_suo_desc:0 "我们的目标是重返高加索，让红旗在最高的山脉上升起。"
 
  ETS_xiang_bei_er_wang:0 "十月余火"
  ETS_xiang_bei_er_wang_desc:0 "中亚此时俨然成为亚洲的革命堡垒，但这远远不够...当初俄国的同志们以自己的生命为代价，让我们在新疆还能有一息尚存，如今我们绝不能忘记这份恩情，是时候让我们偿还血债，北上解放他们的子孙了。"
@@ -863,22 +869,24 @@
  ETS_fang_yu_bian_jing:0 "防御边疆"
  ETS_fang_yu_bian_jing_desc:0 "对于我们而言最好的方法是守住边疆，利用主场优势不断的消耗敌人的有生力量，以此谋求最后的胜利！"
  ETS_ran_qi_feng_huo:0 "燃起烽火"
- ETS_ran_qi_feng_huo_desc:0 " "
+ ETS_ran_qi_feng_huo_desc:0 "时机已到，我们是时候点燃十月的余火了，让全世界都知道，那场伟大的革命从来都没有结束，失败不过是暂时的休养生息。"
  ETS_chong_jian_su_wei_ai:0 "重建苏维埃"
- ETS_chong_jian_su_wei_ai_desc:0 " "
+ ETS_chong_jian_su_wei_ai_desc:0 "苏维埃，这个名字在我们的心中永远不会消失，我们将在背叛者的尸体上重建这个伟大的国家，社会主义的旗帜将永远飘扬。"
 
  ETS_chong_fan_zhong_hua:0 "重返中华"
  ETS_chong_fan_zhong_hua_desc:0 "无论如何，我们都是中国人，我们的祖先曾经在这片土地上生活过，我们的子孙也将在这片土地上生活。我们的目标是重返中华，让我们的子孙能够在这片土地上生活得更好。"
  ETS_tu_xi_meng_gu_ren:0 "突袭蒙古人"
- ETS_tu_xi_meng_gu_ren_desc:0 " "
+ ETS_tu_xi_meng_gu_ren_desc:0 "恩琴的春秋大梦是时候结束了，这个俄罗斯的屠夫将迎来人民的审判！我们将去解放我们的邻居，我们的同胞。"
  ETS_jin_ju_nan_fang:0 "进军南方"
- ETS_jin_ju_nan_fang_desc:0 " "
+ ETS_jin_ju_nan_fang_desc:0 "终结这些可耻的卑劣军阀，焚烧掉那些军阀们为了统治人民而种植在中华大地上的罪恶毒品。"
  ETS_chong_gou_zhong_hua_ming_zu:0 "重构中华民族观"
  ETS_chong_gou_zhong_hua_ming_zu_desc:0 " "
  ETS_di_san_ci_guo_ge_ming:0 "第三次国民革命"
- ETS_di_san_ci_guo_ge_ming_desc:0 " "
- ETS_bei_jin_bei_jin:0 "北京！北京！"
- ETS_bei_jin_bei_jin_desc:0 " "
+ ETS_di_san_ci_guo_ge_ming_desc:0 "革命的火焰永不熄灭，我们将继续前进，直到我们的目标实现。"
+ ETS_bei_jin_bei_jin:0 "斩首暴君！"
+ ETS_bei_jin_bei_jin_desc:0 "向着北京，向着那个让我们的祖先流尽血泪的地方，向着那个让我们的子孙无法安居的地方，向着那个让我们的同胞无法自由的地方，向着中华百年耻辱的根源前进！"
+ ETS_duo_hui_zu_jie:0 "夺回租界"
+ ETS_duo_hui_zu_jie_desc:0 "我们的土地，我们的人民，我们的资源，我们的未来，我们的一切！"
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
