--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -880,7 +880,7 @@
  ETS_jin_ju_nan_fang:0 "进军南方"
  ETS_jin_ju_nan_fang_desc:0 "终结这些可耻的卑劣军阀，焚烧掉那些军阀们为了统治人民而种植在中华大地上的罪恶毒品。"
  ETS_chong_gou_zhong_hua_ming_zu:0 "重构中华民族观"
- ETS_chong_gou_zhong_hua_ming_zu_desc:0 " "
+ ETS_chong_gou_zhong_hua_ming_zu_desc:0 "我们的革命从来都不是为了某一个民族的革命，我们的革命是全体无产阶级对资产阶级的革命，是彻底清算旧世界塑造新世界的革命。"
  ETS_di_san_ci_guo_ge_ming:0 "第三次国民革命"
  ETS_di_san_ci_guo_ge_ming_desc:0 "革命的火焰永不熄灭，我们将继续前进，直到我们的目标实现。"
  ETS_bei_jin_bei_jin:0 "斩首暴君！"
@@ -911,6 +911,27 @@
  xinren.7.d:0 "一位老妇蹲在街角，用土灶烧着热腾腾的馕饼，阵阵麦香混合着炭火的烟味飘荡开来，吸引了一群瘦弱的孩子围拢上前。老妇一边用粗糙的手翻动着馕饼，一边叮嘱孩子们不要推搡，樊耀南颁布的命令让她能安心卖馕，哪怕物资匮乏，她也愿意为饥饿的孩子分上一口。\n\n街边的树木被战火烧成了光秃秃的黑影，却有几名士兵在树下分发粮食——这是樊耀南的军队提供的补给。粮袋里是粗糙的面粉和干硬的咸菜，但人们的眼神中透着一种满足，仿佛这些微薄的救助已是难得的恩赐。士兵们衣衫破旧，手上的枪械看起来同样残缺，但他们分发物资时，眼中却没有轻蔑，而是一种与百姓共患难的平静。\n\n赛福鼎和民族军的战士们在凌晨时分来到此处，说实在话，喀什和乌鲁木齐的情况其实并不比这好到哪去，随着战马头部的甩动，赛福鼎从脑海中被拉了出来。樊耀南穿着褪色的长袍马褂，正在不远处等着，组织对这次的谈判何其充满信心，甚至急促的连场地都没安排。和正常的谈判一样，之后的事情一切照常。\n\n......\n\n“所有的难民都能回到自己的土地上，女人，孩子还有老人，士兵，旧官吏甚至被担保无罪的地主...都能毫无制度性阻碍的加入当地的合作社，分到属于自己的土地...我对主发誓”\n“何以见得”樊耀南明显对于如此友善的承诺显出怀疑，毕竟青年党人和初来南疆的民族军所犯下的...错误有目共睹。\n“汉人代表不是已经能进入我们的民族代表大会了？每个区域都有按比例计算的...”\n“维吾尔族同样能进入杨增新的政府。”樊耀南的驳斥让赛福鼎不由得一怔，过了几秒，赛福鼎才回应到：\n“我们不是那些人...”"
  xinren.7.a:0 "我们是布尔什维克...布尔什维克"
  xinren.8.t:0 "中亚的异动"
- xinren.8.d:0 "我们的前仆从国似乎遭到了来自他邻居的教训，我们是否应该做出回应？"
+ xinren.8.d:0 "阿拉什共和国的全国农民联盟和新疆的布尔什维克残党在阿拉木图发起了一场政变，代表我方的政府被迅速推翻，东突厥斯坦的部队从山麓的东边立即响应突袭，阿拉什...已经全境落入敌手。如今其领导人前来我国寻求庇护，此等螳臂当车的事件属实有辱我国天威，军队中的鹰派将领歇斯底里的要求进攻...是时候做出决断了。"
  xinren.8.a:0 "出击"
- xinren.8.b:0 "视而不见"
+ xinren.8.b:0 "还有其他事情，先放着吧"
+ xinren.9.t:0 "正义的信仰"
+ xinren.9.d:0 "高山雪岭之间的空气沉闷而凝重，阿合买提江·哈斯木带着几位并不持枪的警卫，踏入了一片由萨拉菲分子掌控的地带。这里，黑色的旗帜上写满了古兰经的经文，枪口对准着每一个异端。\n\n其首领坐在中央，身形高大，目光犀利。他并没有为阿合买提江准备座位，而是冷冷地注视着他。\n\n“阿合买提江，”首领开口，声音如同冰冷的刀锋，“你代表的，是那群卡菲尔人吗？”阿合买提江没有从容地回答：“穆罕默德兄弟，新疆民族军绝非异教...真主至大，他的意志贯穿时间与空间。真主便是真理，真理在过去是如此，如今亦是如此，将来也必然如此。”\n\n营地内的空气瞬间紧绷，首领们窃窃私语，许多人握紧腰间的刀剑。穆罕默德皱了皱眉，他显然对阿合买提江的言论感到不满：“你这是在篡改古兰经的教义！”\n\n阿合买提江微微一笑，：“不，我只是想向兄弟们证明，真理是无所不在的，也包括即将发生的事情。请稍作等待，真主会以日降下惩罚，但党会希望宽恕你们的暴行，让你们成为真主忠仆。”而他早已从俄罗斯新闻中得知了日食的确切时间，这也让他自信满满。\n\n星月掌握在真主之手，凡人不可亵渎。阿合买提江的狂言使得众人群情激动，穆罕穆德好不容易控制住了自己的情绪，表示若是日食没能到来，一定要将其生吞活剐。\n\n几小时后，天空逐渐暗淡下来。正午时分，太阳开始被月影遮蔽，原本耀眼的光辉迅速褪去，整个营地陷入了昏暗的寂静。有人惊呼，有人跪地祈祷，甚至有人开始哭泣，此前的所作所为在信众心中不再正义。\n\n穆罕默德面色复杂，他的威严似乎在日食的光影中动摇了。他站起身来，沉声说道：“你预言的事情发生了，这的确是真主的启示。你可以向我的部队公开演讲，但你的言论若有任何冒犯之处，后果你应当清楚。”\n\n阿合买提江点头致意，在众多头巾的拥簇下走出大帐，听着召集部众的呼叫。他知道，这只是迈出的第一步，而走出麦加，还要漫漫长路。"
+ xinren.9.a:0 "“先知，我们愿意加入...”"
+ xinren.10.t:0 "人人皆为圣裔"
+ xinren.10.d:0 "革命之后，村中设立夜校，教员们召集村民学习文字，阿不力克木也被鼓励去学习。烛光摇曳，映照在他满是皱纹的脸上，他低着头，仿佛害怕自己与知识的世界之间太过遥远。\n\n那夜，教员翻开了一本《古兰经》，似乎和以前的布道者并无区别，只是从聆听变成了朗读。阿不力克木指着文字缓慢诵读道：“真主的子民不可忍受压迫，也不可容忍邪恶的统治者。真主创造人类，使其昂首行于大地，而不是低眉跪伏于暴君的脚下。”\n\n阿不力克木的双眼睁大了，他从未听过这样的教诲。他怯声问道：“教员，这是《古兰经》中的话吗？我以前并没有从教士阿訇口中听闻。”\n\n教员微微一笑，目光如烛火般温暖：“兄弟，真主赋予每个人尊严和智慧。他希望他的子民团结起来，对抗压迫者，使公平与正义降临大地。”\n\n教员指着一行经文，耐心地教阿不力克木认字。他说：“这是‘真理’的文字；这是‘公义’的文字；这是‘自由’的文字。”\n\n阿不力克木不再低头看自己的脚，而是抬头呆滞地仰望星空。他明白了：贫困与愚昧不是命运的桎梏，而是压迫者强加的枷锁，而他作为真主的子民，理应砸烂枷锁，站立起来。\n\n当阿不力克木从夜校回到家中，他不再沉默。他站在夫人面前，脱去了夫人的头纱：“无论是谁，再也不能使我们低头跪拜！这是主的意志！”"
+ xinren.10.a:0 "“按劳呼艾克拜尔（真主至大）”"
+ xinren.11.t:0 "野公猪之死"
+ xinren.11.d:0 "乌斯满站在一座废弃的牧场旁，身后的残部七零八落。冷风掠过草原，卷起沙尘，像是嘲笑这些败军。乌斯满裹紧了身上的军衣，目光扫过面前的一群战士，这些人是他唯一的依靠，也是他赌上一切的筹码。\n\n有士兵试探着劝道：“将军，全国农民协会已经撤回了伊犁，我们再拖下去只会被白军围剿，不如也撤回去，保存实力...”\n\n乌斯满冷笑一声，拔出手枪狠狠地敲击着腰间的皮带，声音像是雷鸣般在寒冷的空气中炸裂：“回东突厥斯坦？回去听阿合买提江那些人指手画脚吗？他们那些布尔什维克，想让那个达列力汗来取代我，让我成为笑话！告诉你们，我乌斯满绝不会回新疆！我要跟他们斗争到底！”\n\n他的眼神扫过那些低头沉默的战士。“他们以为，我乌斯满会低头认命？不会！我们要在这里打下去！白军、布尔什维克，谁都别想将我们赶尽杀绝。我们还有枪，还有马，还有这片草原！”\n\n士兵们彼此对视，有人显得迟疑，但更多的人选择低头沉默。他们知道，乌斯满是一个固执的人，他的野心注定他无法忍受屈从。\n\n乌斯满继续说道：“想要活下去的可以走，回到东突厥斯坦，去听那些软弱的人命令你们。可我，乌斯满·巴尔图，绝不会走！在这里，我们仍然是军队，仍然是战士！在这里，我们还能为自己的尊严而战！”\n\n乌斯满缓缓举起手中的枪，朝着远方一望无际的地平线指去：“我们会在这里扎根，用游击打击敌人。白军想要夺走这片草原，俄罗斯人想要统治这些我们，那他们就得付出代价！”\n\n这番话点燃了士兵们心中的最后一丝信念。尽管他们明知希望渺茫，前路险恶，但乌斯满的狂热似乎有着一种无法抗拒的吸引力，让人宁可跟随他踏上孤注一掷的道路。\n\n夜幕降临，破乱不堪的骑兵逐渐隐没在黑暗之中。乌斯满站在队伍的最后，望着远处那些闪烁的火光，嘴角浮现一抹冷笑。他心里明白，自己已经没有退路，但正是这样的孤注一掷，才能成就他心中的梦想——哪怕是从瓦砾之中重新燃起的微弱火光，也绝不让那些觊觎他权力的人得逞。"
+ xinren.11.a:0 "阿拉什的夜空下，一支残军悄然走向死亡"
+ xinren.12.t:0 "又回旧乾坤？"
+ xinren.12.d:0 "“我们的民族革命运动，是反对军阀反动派、国内外帝国主义及其爪牙的民族主义运动。我们的任务，是在推翻压迫的基础上，建立一个各民族平等、经济繁荣、文化昌盛的新新疆。这不仅是革命的目标，也是历史赋予我们的使命......”\n\n正当阿巴索夫话音未落，台下一名身穿军衣的党员不耐烦的站了起来。他的举动吸引了众人的目光，会场瞬间安静了下来。\n\n“阿巴索夫同志，”那人声音嘹亮，带着一丝隐忍的愤怒，“革命成功了，好不容易独立了，现在又要我们变成中国人？这是我们追求的革命吗？我们的革命不是白干了吗？！”\n\n会场顿时一片哗然，不少人低声议论，阿巴索夫的脸色微微一沉。\n\n那人继续说道：“伊犁革命是为了摆脱金树仁的压迫，是为了我们东突厥斯坦各民族的自由和尊严。可现在你们却告诉我们，要把自己当作中国人？这和我们过去受压迫的日子有什么不同？我们不想再被任何人统治！我们是东突厥斯坦人，不是中国人！”\n\n台下一部分党员纷纷点头表示支持。甚至有人低声咒骂，用最恶毒的语言诅咒着台上稚气未干却久经沙场的党和国家领导人。\n\n会场在包尔汉的数次叫停中终于安静下来。阿巴索夫的目光扫过全场，最终停在那名男子身上：“同志，三区革命的目标，是解放全新疆，而不是制造新的分裂与对立。我们斗争的目的，是让所有民族不再遭受压迫，而不是让一个民族凌驾于另一个民族之上。建立平等的政权，是对过去压迫的彻底否定，而不是回到另一个极端。”\n\n那人并未退缩，反而步步紧逼：“你们讲的是平等，可谁又来保证我们的文化、我们的宗教、我们的语言不会被同化？这次会议的精神，难道不是在逼我们承认自己属于中国，而不是东突厥斯坦吗？”\n\n空气凝固了。台上的领导们面面相觑，阿合买提江轻轻皱起眉头，却没有开口制止。阿巴索夫深吸一口气，缓缓说道：“如果我们拒绝团结，那等待我们的，将不仅仅是失去文化的风险。”\n\n然而，会场中的嘈杂声并未平息。"
+ xinren.12.a:0 "行元祖顺治故事，能否摆脱昭昭天命？"
+ xinren.13.t:0 "回到牢房，坠入梦乡"
+ xinren.13.d:0 "我们在冰冷的牢房里坐了一整夜，借着微弱的油灯光，摆开了简陋的棋盘。当他一颗颗吃掉我的棋子时，我注意到他脸上那抹诡异的从容，竟透着几分天真的玩心。而当我第一次将他的王将死时，他的神色忽然变得深沉。\n\n“这不是一个好的征兆，”穆罕默德低声说，目光落在棋盘上，“人死之前，不该输棋。”\n“难道我就可以输吗？”我回问，试图以笑掩饰心中的颤抖，“明早，他们也会带我去处刑场。”\n“不会死的，我亲爱的无神论兄弟，”穆罕默德轻叹一口气，声音中透着奇异的平静，“你是一个正直的人。真主怜悯正直之人。他们可能不会杀你。假如有一天你被释放——如果真主允许你重获自由——请你为我们传达一件事。”\n我愣住了，看着他那双带着信仰光芒的眼睛，竟一时不知该如何回应。他却只是微微一笑，接着说道：“告诉那些自以为自由的人，他们其实并不自由。告诉他们，我们才是真正自由的人。记住，几个小时后，我们将永远失去自由。但曾经有那么一刻，我们是自由的，我们拥抱过自由。”\n\n灯油快要烧尽了，跳动的光芒映在他被折磨得满是伤痕的脸上。他静静收起棋盘，像是在珍视一件稀世珍宝。他站起身，双手合十，低声念着真主的名。\n\n我什么也没说，只觉得胸口一阵窒息。我知道，到了明天，他将被白军拖走，像那些为布尔什维克效力的穆斯林一样，被扔在寒冷的雪地上结束生命。而我，或许只是幸运地多活几日。\n\n当牢门打开，士兵粗暴地带走他时，他回头对我笑了笑，那笑容像是要将他的话永远刻进我的记忆里："
+ xinren.13.a:0 "“我们曾拥抱过自由。”"
+ xinren.14.t:0 "参军之前留下的诗"
+ xinren.14.d:0 "突厥斯坦，我美丽的祖国，\n我时时刻刻为你准备着！\n刀山，火海，视死如归，\n我永远跟你在一起！\n\n突厥斯坦，我美丽的祖国，\n如果有一天你自由了，\n如果有一天你自由了，\n——你是否会忘记我？\n\n寺庙将会重建，\n人类将会康复，\n我们的革命，\n最终也会重整旗鼓。"
+ xinren.14.a:0 "诗歌只孕育同谋，歌曲则创造民众"
+ xinren.15.t:0 "村支书讲话"
+ xinren.15.d:0 "亲爱的村民！你们看不到我，但我能透过窗户看到你们。我还能看到，外面冷风袭人，你们在发抖，所以我只讲几句活。\n\n我们推翻了白军及其余党的入侵！垮台的俄国佬逃胞了，带走了国家所有的黄金。但是没有关系！你们高兴地听着，我在这里宣告：真正独立的中亚苏维埃成立了，并且把俄罗斯人彻彻底底赶跑了！我们将惩罚罪犯，但不会冤枉好人。在真主面前，人人平等。我们的计划，是自由的计划。尤其是，我们不是政治家。\n\n面包会有的，肉会有的，以后不会再有战争。民主的苏维埃重新闪烁出昔日的光耀！\n\n白军崩溃了。苏维埃诞生了。独裁灭亡，国家万岁！一切自由！ 你们可以去你们想去的地方。但你们不要做蠢事！明天，我将在同样的时间里向你们讲话。\n\n全世界无产者联合起来！我们所有人都颂扬你在天堂的荣耀！前进吧，基督徒，主会保佑你们的！哎呀呀！没问题！祝大家好运！安拉胡阿克巴！"
+ xinren.15.a:0 "工人苏维埃万岁万岁万万岁！"
