right now, I'm working on the Legation Cities, and I'm adding a new leader, Hu Feng, to the Legation Cities.

--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -516,7 +516,8 @@
  lecgong.17.f:0 "鲁迅先生的挚友，左联元老柔石"
  lecgong.17.g:0 "看看别的候选人"
  lecgong.18.a:0 "回族社会主义运动家马三立"
- lecgong.18.b:0 "看看别的候选人"
+ lecgong.18.b:0 "左翼作家联盟宣传部部长胡风"
+ lecgong.18.c:0 "看看别的候选人"
  lecgong.10.t:0 "佛寺、教堂、清真寺"
  lecgong.10.d:0 "上海是一座多元文化的大都市，在这里有穆斯林、基督徒、新教徒、佛教徒甚至一贯道等各种各样的宗教信仰，尽管左联和总工会中的绝大多数成员都是无神论者，但是按照法国和英国的惯例来说我们应该施行宗教自由政策。只要这些信徒服从我们的管理，不是听命于梵蒂冈之类的地方。不过自然也有着不少希望废除各种各样的“上帝”的声音，他们说只要还保持着这些虚幻的信仰他们就不可能真正的融入我们想要建设的新上海。"
  lecgong.10.a:0 "除了一贯道之类的东西外还是施行宗教自由吧"
